deploy/k3s/registry/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/part-of: registry
